# Movie-Recommendation

./: .gitignore  LICENSE  README.md  app.py  main.py  model_builder.py  pyproject.toml  requirements.txt
