[project]
name = "movie-recommended-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "streamlit>=1.55.0",
    "streamlit-extras>=0.7.8",
    "streamlit-option-menu>=0.4.0",
]
